--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "create-code"
   ],
   "bin": {
-    "parallel": "./bin/bin.mjs"
+    "create": "./bin/bin.mjs"
   },
   "repository": "https://github.com/LiuWenXing1996/create-code-easy",
   "homepage": "https://github.com/LiuWenXing1996/create-code-easy",
