--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@inquirer/core": "^10.1.2",
     "@inquirer/prompts": "^7.2.1",
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/micromatch": "^4.0.9",
     "@types/yargs": "^17.0.33",
     "bundle-require": "^5.0.0",
     "chalk": "^5.3.0",
     "core-js-pure": "^3.38.1",
     "fs-extra": "^11.2.0",
+    "lodash-es": "^4.17.21",
     "micromatch": "^4.0.8",
     "radash": "^12.1.0",
     "spawn-command": "^1.0.0",
